--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
     "@ionic-native/firebase-x": "^5.36.0",
     "@ionic-native/geolocation": "^5.28.0",
     "@ionic-native/native-geocoder": "^5.28.0",
+    "@ionic-native/network": "^5.36.0",
     "@ionic-native/social-sharing": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova-android": "^14.0.1",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-datepicker": "^0.9.3",
+    "cordova-plugin-firebase": "^2.0.6",
+    "cordova-plugin-firebasex": "^18.0.7",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-res": "^0.15.1",
@@ -65,16 +69,15 @@
     "@types/node": "^12.11.1",
     "call-number": "^1.0.1",
     "codelyzer": "^6.0.0",
-    "cordova-android": "^13.0.0",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-browsertab": "^0.2.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-fcm-with-dependecy-updated": "^4.1.0",
-    "cordova-plugin-firebasex": "^18.0.7",
+    "cordova-plugin-fcm-with-dependecy-updated": "^7.8.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-network-information": "^3.0.0",
     "cordova-plugin-sms-receive": "^1.0.2",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
@@ -116,44 +119,20 @@
       "mx.ferreyra.callnumber": {},
       "call-number": {},
       "cordova-plugin-datepicker": {},
-      "cordova-plugin-fcm-with-dependecy-updated": {},
+      "cordova-plugin-fcm-with-dependecy-updated": {
+        "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher",
+        "ANDROID_FCM_VERSION": "21.0.0",
+        "ANDROID_FIREBASE_BOM_VERSION": "26.0.0",
+        "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.4",
+        "ANDROID_GRADLE_TOOLS_VERSION": "4.1.0"
+      },
       "cordova.plugins.diagnostic": {
         "ANDROIDX_VERSION": "1.0.0",
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
       },
-      "cordova-plugin-firebasex": {
-        "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
-        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "true",
-        "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
-        "FIREBASE_FCM_AUTOINIT_ENABLED": "true",
-        "FIREBASE_ANALYTICS_WITHOUT_ADS": "false",
-        "FIREBASE_MESSAGING_IMMEDIATE_PAYLOAD_DELIVERY": "false",
-        "GOOGLE_ANALYTICS_ADID_COLLECTION_ENABLED": "true",
-        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_ANALYTICS_STORAGE": "true",
-        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_AD_STORAGE": "true",
-        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_AD_USER_DATA": "true",
-        "GOOGLE_ANALYTICS_DEFAULT_ALLOW_AD_PERSONALIZATION_SIGNALS": "true",
-        "ANDROID_ICON_ACCENT": "#FF00FFFF",
-        "ANDROID_FIREBASE_PERFORMANCE_MONITORING": "false",
-        "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "18.1.1",
-        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "21.3.0",
-        "ANDROID_FIREBASE_ANALYTICS_VERSION": "22.2.0",
-        "ANDROID_FIREBASE_MESSAGING_VERSION": "24.1.0",
-        "ANDROID_FIREBASE_CONFIG_VERSION": "22.1.0",
-        "ANDROID_FIREBASE_PERF_VERSION": "21.0.4",
-        "ANDROID_FIREBASE_AUTH_VERSION": "23.2.0",
-        "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "21.0.1",
-        "ANDROID_FIREBASE_FIRESTORE_VERSION": "25.1.2",
-        "ANDROID_FIREBASE_FUNCTIONS_VERSION": "21.1.0",
-        "ANDROID_FIREBASE_IID_VERSION": "21.1.0",
-        "ANDROID_FIREBASE_INSTALLATIONS_VERSION": "18.0.0",
-        "ANDROID_FIREBASE_CRASHLYTICS_VERSION": "19.4.0",
-        "ANDROID_FIREBASE_CRASHLYTICS_NDK_VERSION": "19.4.0",
-        "ANDROID_GSON_VERSION": "2.11.0",
-        "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.4.2",
-        "ANDROID_GRPC_OKHTTP": "1.68.0"
-      },
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-firebasex": {}
     },
     "platforms": [
       "browser",
